# pyowl2

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  python-package.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  funding.md  index.rst  latexmkrc  main.md  modules.rst  pyowl2.abstracts.rst  pyowl2.axioms.annotations.rst  pyowl2.axioms.assertion.rst  pyowl2.axioms.class_axiom.rst  pyowl2.axioms.data_property_axiom.rst  pyowl2.axioms.object_property_axiom.rst  pyowl2.axioms.rst  pyowl2.base.rst  pyowl2.class_expression.rst  pyowl2.data_range.rst  pyowl2.expressions.rst  pyowl2.getter.rst  pyowl2.individual.rst  pyowl2.literal.rst  pyowl2.mapper.rst  pyowl2.rst  pyowl2.utils.rst  usage.md
pyowl/: __init__.py  ontology.py
pyowl/abstracts/: annotation_axiom.py  annotation_subject.py  annotation_value.py  assertion.py  axiom.py  class_axiom.py  class_expression.py  data_property_axiom.py  data_property_expression.py  data_range.py  entity.py  individual.py  object_property_axiom.py  object_property_expression.py  property_range.py
pyowl/axioms/: datatype_definition.py  declaration.py  general.py  has_key.py
pyowl/base/: annotation.py  annotation_property.py  datatype.py  iri.py  owl_class.py
pyowl/class_expression/: data_all_values_from.py  data_exact_cardinality.py  data_has_value.py  data_max_cardinality.py  data_min_cardinality.py  (+12 more)
pyowl2/: ontology.py  requirements.txt
test/: test_annotations.py  test_assertions.py  test_class_axioms.py  test_data_property_axioms.py  test_data_ranges.py  test_has_key.py  test_object_property_axioms.py
(+384 files in other folders)
