[metadata]
name = pyowl
version = 1.0.0
author = Giuseppe Filippone
author_email = giuseppe.filippone01@unipa.it
description = A python implementation of the OWL 2 standard. See https://www.w3.org/TR/owl2-syntax/ and https://www.w3.org/TR/owl2-mapping-to-rdf/
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/giuseppefilippone/pyowl
license = CC-BY-SA-4.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Creative Commons Attribution-ShareAlike 4.0 International
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    requests

[options.package_data]
* = *.md

[options.packages.find]
where = .
exclude =
    tests*